[package]
name = "drive"
version = "0.1.0"
authors = ["monell <monell.zhong@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
io = {path = "./../io"}
util = {path = "./../util"}

[[bin]]
name = "srdb"
path = "src/main.rs"